- NEW: In the log dialog filter, a ! char at the beginning will negate
       the filter string. (Stefan)
- NEW: Column in the check-for-modifications dialog to show 
       the lock date. (Stefan)
- NEW: Context menu to delete and ignore files at the same time. (Stefan)
- NEW: Tooltips in the action column of the log dialog, explaining the
       action icons. (Stefan)
- CHG: The bug-ID column width in the log dialog is now limited 
       to 200 pixels. (Stefan)
- CHG: The right-drag context menu now only shows "Export" if a versioned
       folder is dragged (for files, the windows 'copy' does the same). (Stefan)
- CHG: The right-drag context menu checks whether source and target are
       from the same repository and shows the "SVN move" and "SVN copy"
       commands only if they are. (Stefan)
- CHG: When only files are selected for "Add", the Add-dialog is not
       shown anymore but the files are added immediately. (Stefan)
- CHG: file:// access to BDB based repositories is no longer supported. (Stefan)
- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)
- CHG: New revision graph look. (Stefan Fuhrmann)
- CHG: Faster and more reliable revision graph filtering. (Stefan Fuhrmann)
- CHG: If tsvn:logtemplate was set and not changed in the commit dialog, it
       isn't added to the log history anymore. (Stefan)
- CHG: "Ambiguous URL" option no longer limits log cache functionality.
       (Stefan Fuhrmann)
- CHG: Various improvements to log statistics graphs (Aras Pranckevicius)
- CHG: The merge wizard is now resizable. (Stefan)
- CHG: The checkout/export dialogs do not ask whether to create the folder
       to checkout/export aynmore but silently create it. (Stefan)

Version 1.5.7
- BUG: Error text returned from a repository hook script could get split up
       wrong if empty lines were in the text. (Stefan)

Version 1.5.6